// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLink with children in auto mode 1`] = `
<div>
  <router-link-stub
    class="active sidebar-link"
  >
    With Children
  </router-link-stub>
  <ul
    class="sidebar-sub-headers"
  >
    <li
      class="sidebar-sub-header"
    >
      <router-link-stub
        class="active sidebar-link"
      >
        Child 1
      </router-link-stub>
    </li>
    <li
      class="sidebar-sub-header"
    >
      <router-link-stub
        class="active sidebar-link"
      >
        Child 2
      </router-link-stub>
    </li>
  </ul>
</div>
`;

exports[`SidebarLink with headers but no children 1`] = `
<div>
  <router-link-stub
    class="active sidebar-link"
  >
    No Children
  </router-link-stub>
  <ul
    class="sidebar-sub-headers"
  >
    <li
      class="sidebar-sub-header"
    >
      <router-link-stub
        class="active sidebar-link"
      >
        Header 1
      </router-link-stub>
    </li>
    <li
      class="sidebar-sub-header"
    >
      <router-link-stub
        class="active sidebar-link"
      >
        Header 2
      </router-link-stub>
    </li>
    <li
      class="sidebar-sub-header"
    >
      <router-link-stub
        class="active sidebar-link"
      >
        Header 3
      </router-link-stub>
    </li>
  </ul>
</div>
`;

exports[`SidebarLink without children and headers 1`] = `
<router-link-stub
  class="active sidebar-link"
>
  No Children and Headers
</router-link-stub>
`;
